# interview

./: README.md
go/: go.mod
java/: .dockerignore  Dockerfile  README.md  build.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/helm/: Chart.yaml
java/helm/templates/: deploy.yaml  service.yaml
java/src/: README.md
java/src/main/java/org/nyefan/: Application.java  Main.java
java/src/main/java/org/nyefan/controllers/: BookController.java
java/src/main/java/org/nyefan/entities/: Book.java
java/src/main/java/org/nyefan/repositories/: BookRepository.java
java/src/main/java/org/nyefan/services/: BookService.java
java/src/main/resources/: application.properties
java/src/test/java/org/nyefan/: ApplicationTest.java
java/src/test/java/org/nyefan/controllers/: BookControllerTest.java
java/src/test/resources/: application-test.properties
python/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
python/helm/: Chart.yaml
python/helm/templates/: deploy.yaml  service.yaml
python/interview_python/: __init__.py
python/interview_python/db/: db.py  schema.sql
python/interview_python/routes/: books.py
python/src/: app.py
typescript/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
typescript/helm/: Chart.yaml
typescript/helm/templates/: deploy.yaml  service.yaml
typescript/src/: app.ts
typescript/src/Databases/: lowdb.ts
typescript/src/Models/: book.ts
typescript/src/Routes/: book.ts
typescript/src/Services/: book.ts
