[project]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask",
    "click"
]
name = "interview-python"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["interview_python"]
